# thulani

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  Dockerfile-migrate  LICENSE  README.md  bot.py  build.sbt  commands.go  config.example.json  config.example.toml  config.example.yml  docker-compose.yml  event_handler.scala  extramemes.go  flake.nix  main.scala  messagectx.go  mix.exs  opus_test.c  package.yaml  requirements.txt  setup_db.sh  shell.nix  srv.py  stack.yaml  thulani.cabal  thulani.go  util.go
apps/thulani_bot/: .gitignore  README.md  mix.exs
apps/thulani_bot/lib/thulani/bot/: application.ex  config.ex  consumer.ex  env_config_provider.ex  supervisor.ex
apps/thulani_bot/test/thulani/bot/: application_test.exs
apps/util/: README.md  mix.exs
apps/util/lib/thulani/: util.ex
apps/util/lib/thulani/util/: compose.ex  curry.ex
apps/util/test/thulani/: util_test.exs
cmd/: main.go
config/: config.exs  dev.exs  dotenv.exs  load_from_dotenv.exs  prod.exs
docker/: db.docker  setup_db.sh  thulani.docker
downloader/: download_manager.go  downloader.go  downloader_test.go  util.go
migrations/2018-02-15-031841_create_memes/: down.sql  up.sql
migrations/2018-04-05-190159_add_data_indexes/: down.sql  up.sql
migrations/2018-04-06-005800_consolidate_memes/: down.sql  up.sql
migrations/2018-04-06-223934_add_hash_to_data/: down.sql  up.sql
migrations/2018-04-07-091602_add_filename/: down.sql  up.sql
migrations/2018-05-04-010249_deletion_record/: down.sql  up.sql
migrations/2019-03-03-045503_meme_invocation_records/: down.sql  up.sql
migrations/2019-03-08-073831_store-token/: down.sql  up.sql
nix/: sources.json
rel/: env.bat.eex  env.sh.eex
src/: Config.hs  Main.hs  bot.rs  commands.rs  config.rs  game.rs  iosplit.rs  log_setup.rs  main.rs  util.rs
src/audio/: mod.rs  play_queue.rs  timeutil.rs  ytdl.rs
src/commands/: calc.pest  db.rs  help.rs  meme.rs  mod.rs  playback.rs  roll.rs  sound.rs  sound_levels.rs  today.rs
src/commands/meme/: create.rs  delete.rs  history.rs  invoke.rs  mod.rs
src/commands/playback/: mod.rs  types.rs
src/commands/today/: france.rs  halloween.rs  mod.rs  nov_5.rs  pianoman.rs  prelude.rs  putin.rs  sept_21.rs  shrek.rs  thursday.rs  tomorrow.rs  ussr.rs  wednesday.rs
src/db/: mod.rs  models.rs  schema.rs
wav/: dr_wav.h  wav.go  wav_test.go
