[package]
name = "thulani"
version = "0.1.5"
authors = ["Nathan Perry <avaglir@gmail.com>"]

[features]
default = ["diesel"]

[dependencies]
lazy_static = "1.0"
failure = "0.1"
log = "0.4"
typemap = "0.3"
url = "1.6"
dotenv = "0.11"
dotenv_codegen = "0.11"
chrono = "0.4"
fern = { version = "0.5", features = ["colored"] }
diesel = { version = "1.1", features = ["postgres", "chrono", "r2d2"], optional = true }
ctrlc = { version = "3.0", features = ["termination"] }
rand = "0.5"
either = "1.5"
reqwest = "0.8"
sha1 = { version = "0.6.0", features = ["std"] }
mime_guess = "1.8.4"
regex = "0.2"
clap = "2.31"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "framework", "model", "utils", "voice", "standard_framework"]
git = "https://github.com/mammothbane/serenity"
