[package]
name = "thulani"
version = "0.1.6"
authors = ["Nathan Perry <avaglir@gmail.com>"]

[features]
default = ["diesel"]

[dependencies]
lazy_static = "1.2.0"
failure = "0.1.3"
log = "0.4.6"
typemap = "0.3.3"
url = "1.7.2"
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
chrono = "0.4.6"
time = "0.1.42"
fern = { version = "0.5.7", features = ["colored"] }
diesel = { version = "1.3.3", features = ["postgres", "chrono", "r2d2"], optional = true }
ctrlc = { version = "3.1.1", features = ["termination"] }
rand = "~0.6"
either = "~1.5"
reqwest = "^0.9"
sha1 = { version = "0.6.0", features = ["std"] }
mime_guess = "1.8.6"
regex = "1.1.0"
clap = "2.32.0"
itertools = "0.8.0"
serde_json = "~1.0"
flate2 = "^1.0"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "framework", "model", "utils", "voice", "standard_framework"]
git = "https://github.com/mammothbane/serenity"
