[package]
name = "thulani"
version = "0.1.6"
authors = ["Nathan Perry <avaglir@gmail.com>"]

[features]
default = ["db", "games"]
db = ["diesel", "postgres", "r2d2_postgres"]
games = []

[dependencies]
lazy_static = "~1.3"
failure = "^0.1"
log = "^0.4"
typemap = "^0.3"
url = "~1.7"
dotenv = "^0.13"
dotenv_codegen = "^0.11"
chrono = "^0.4"
time = "^0.1"
fern = { version = "^0.5", features = ["colored"] }
diesel = { version = "~1.4", features = ["postgres", "chrono", "r2d2"], optional = true }
ctrlc = { version = "~3.1", features = ["termination"] }
rand = "^0.6"
either = "~1.5"
reqwest = "^0.9"
sha1 = { version = "^0.6", features = ["std"] }
regex = "~1.1"
itertools = "^0.8"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
timeago = "^0.1"
statrs = "^0.10"
fnv = "~1.0"
pest = "~2.1"
pest_derive = "~2.1"
postgres = { version = "^0.15", optional = true, features = ["with-chrono"] }
r2d2_postgres = { version = "^0.14", optional = true }

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "framework", "model", "utils", "voice", "standard_framework"]
git = "https://github.com/mammothbane/serenity"
